--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="player-container">
     <i class="custom-volume-button" style="display: none"></i>
     <video id="videojs" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay preload="auto" fluid="true" poster="maran.png?v=1">
-        <source src="https://luna-1-video.mediaserver.digital/exitosatv_233b-4b49-a726-5a451262/index.fmp4.m3u8" type="application/x-mpegURL">
+        <source src="https://geo.dailymotion.com/player/x14ru6.html?video=k2eC5HQOmJKHuUE1muC" type="application/x-mpegURL">
         <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a web browser that
             <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -212,3 +212,4 @@ function attemptReconnection() {
 </script>
 </body>
 </html>
+
