--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="appUrl" content="https://7.innovatestream.pe:2020/VideoPlayer/contigofm" />
+    <meta name="appUrl" content="https://live2.eu-north-1a.cf.dmcdn.net/sec2(53ShxZBrSdAXNcXNbeJSIizsKGS1_3Xh48TKmlpjx7QdL6v7NBEUaiC_Hxo-_txkLWYz9fP0cDM5D7ePHY3JRqEAi33xPca0xzv8q2s5KBNnwVuYKtU-R4q1WUxwx5K3)/cloud/3/x9s3ad6/s/live-480.m3u8" />
     <link href="/video-js.min.css" rel="stylesheet">
     <link href="/quality-selector.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
@@ -212,4 +212,5 @@ function attemptReconnection() {
 </script>
 </body>
 </html>
+
 
