--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="player-container">
     <i class="custom-volume-button" style="display: none"></i>
     <video id="videojs" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay preload="auto" fluid="true" poster="maran.png?v=1">
-        <source src="https://geo.dailymotion.com/player/x14ru6.html?video=k2eC5HQOmJKHuUE1muC" type="application/x-mpegURL">
+        <source src="https://live2.eu-north-1a.cf.dmcdn.net/sec2(53ShxZBrSdAXNcXNbeJSIizsKGS1_3Xh48TKmlpjx7QdL6v7NBEUaiC_Hxo-_txkLWYz9fP0cDM5D7ePHY3JRqEAi33xPca0xzv8q2s5KBNnwVuYKtU-R4q1WUxwx5K3)/cloud/3/x9s3ad6/s/live-480.m3u8" type="application/x-mpegURL">
         <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a web browser that
             <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -212,5 +212,6 @@ function attemptReconnection() {
 </script>
 </body>
 </html>
+
 
 
